// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseGitURL invalid links excessive path matches snapshot 1`] = `
Object {
  "error": [ExcessivePath: Path too long: /org/repo/tree/master/README.md],
  "tag": false,
}
`;

exports[`parseGitURL invalid links unknown host matches snapshot 1`] = `
Object {
  "error": [UnsupportedHostName: Hostname "unknown.com" is not supported],
  "tag": false,
}
`;

exports[`parseGitURL invalid links unknown protocol matches snapshot 1`] = `
Object {
  "error": [UnsupportedProtocol: Protocol "unknown:" is not supported],
  "tag": false,
}
`;

exports[`parseGitURL valid links https://github.com/org/repo matches snapshot 1`] = `
Object {
  "tag": true,
  "value": GitUrlInfoInstance {
    "host": "github",
    "name": "repo",
    "owner": "org",
  },
}
`;

exports[`parseGitURL valid links https://github.com/org/repo.git matches snapshot 1`] = `
Object {
  "tag": true,
  "value": GitUrlInfoInstance {
    "host": "github",
    "name": "repo",
    "owner": "org",
  },
}
`;

exports[`parseGitURL valid links https://gitlab.com/org/repo matches snapshot 1`] = `
Object {
  "tag": true,
  "value": GitUrlInfoInstance {
    "host": "gitlab",
    "name": "repo",
    "owner": "org",
  },
}
`;

exports[`parseGitURL valid links https://gitlab.com/org/repo.git matches snapshot 1`] = `
Object {
  "tag": true,
  "value": GitUrlInfoInstance {
    "host": "gitlab",
    "name": "repo",
    "owner": "org",
  },
}
`;
